[project]
name = "goit-pyweb-hw-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Bohdan Chekhirkin",email = "chechirkinbogd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "faker (>=35.2.0,<36.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
